Added settings of ljevicbootstrap theme #3

--- a/themes/ljevicbootstrap/templates/page.html.twig
+++ b/themes/ljevicbootstrap/templates/page.html.twig
@@ -70,20 +70,22 @@
             </div>
         </section>
     {% endif %}
-    <branding id="branding">
+    <div class="container">
         <div class="row">
-            <div class="col-8">
-                {{ page.branding }}
-            </div>
+            <branding id="branding">
+                <div class="col-8">
+                    {{ page.branding }}
+                </div>
+            </branding>
+
+            <languages id="languages">
+                <div class="col-4">
+                    {{ page.languages }}
+                </div>
+            </languages>
         </div>
-    </branding>
-    <languages id="languages">
-        <div class="row">
-            <div class="col-4">
-                {{ page.languages }}
-            </div>
-        </div>
-    </languages>
+    </div>
+
     <navigation id="navigation">
         <div class="row">
             <div class="col-6">
@@ -135,23 +137,22 @@
             </div>
         </div>
     </section>
-
-    {% if page.footer_left %}
-        <footer_left id="footer_left">
-            <div class="row">
-                <div class="col-6">
-                    {{ page.footer_left }}
-                </div>
-            </div>
-        </footer_left>
-    {% endif %}
-    {% if page.footer_right %}
-        <footer_right id="footer_right">
-            <div class="row">
-                <div class="col-6">
-                    {{ page.footer_right }}
-                </div>
-            </div>
-        </footer_right>
-    {% endif %}
+    <div class="footer container">
+        <div class="row">
+            {% if page.footer_left %}
+                <footer_left id="footer_left">
+                    <div class="col-6">
+                        {{ page.footer_left }}
+                    </div>
+                </footer_left>
+            {% endif %}
+            {% if page.footer_right %}
+                <footer_right id="footer_right">
+                    <div class="col-6">
+                        {{ page.footer_right }}
+                    </div>
+                </footer_right>
+            {% endif %}
+        </div>
+    </div>
 </div>
