--- a/themes/ljevicbootstrap/stylesheets/screen.css
+++ b/themes/ljevicbootstrap/stylesheets/screen.css
@@ -88,31 +88,188 @@ time, mark, audio, video {
   font-family: HelveticaNeue, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-/* line 29, ../sass/screen.scss */
+/*-- Site branding --*/
+/* line 31, ../sass/screen.scss */
 .branding {
   color: #7299BF;
 }
-/* line 30, ../sass/screen.scss */
+/* line 32, ../sass/screen.scss */
 .branding a {
   font-size: 2.2rem;
   text-decoration: none;
   color: #8B8B8B;
   display: block;
 }
-/* line 37, ../sass/screen.scss */
+/* line 39, ../sass/screen.scss */
 .branding a img {
   display: block;
   width: 100px;
   float: left;
   margin-right: 20px;
 }
-/* line 45, ../sass/screen.scss */
+/* line 47, ../sass/screen.scss */
 .branding div {
   font-size: 0.9rem;
   line-height: 35px;
 }
-/* line 51, ../sass/screen.scss */
+/* line 53, ../sass/screen.scss */
 .branding .site-name-slogan {
   display: inline-table;
   margin: auto 0;
+}
+/* line 58, ../sass/screen.scss */
+.branding .site-slogan {
+  font-weight: 700;
+  letter-spacing: .04rem;
+}
+
+/*-- language-switcher --*/
+/* line 66, ../sass/screen.scss */
+.languages {
+  display: inline-block;
+  float: right;
+}
+/* line 70, ../sass/screen.scss */
+.languages h2 {
+  font-size: .77rem;
+  margin-bottom: 8px;
+  text-align: left;
+}
+/* line 77, ../sass/screen.scss */
+.languages ul.links li {
+  display: inline-block;
+  margin-right: 8px;
+  border-right: solid 1px;
+  padding-right: 8px;
+  border-color: #8B8B8B;
+}
+/* line 84, ../sass/screen.scss */
+.languages ul.links li :hover, .languages ul.links li :active {
+  color: #98d1b2 !important;
+  font-weight: 700;
+}
+/* line 89, ../sass/screen.scss */
+.languages ul.links li .is-active {
+  color: #98d1b2 !important;
+  font-weight: 700;
+}
+/* line 94, ../sass/screen.scss */
+.languages ul.links li a {
+  color: #8B8B8B;
+}
+/* line 97, ../sass/screen.scss */
+.languages ul.links li.hu {
+  border-right: none;
+}
+
+/*-- Navigation --*/
+/* line 106, ../sass/screen.scss */
+.navigation {
+  margin-top: -20px;
+  margin-bottom: 20px;
+  text-align: right;
+}
+/* line 111, ../sass/screen.scss */
+.navigation ul li {
+  display: inline-block;
+  margin: 0 10px;
+}
+/* line 115, ../sass/screen.scss */
+.navigation ul li a {
+  color: #8B8B8B;
+  font-weight: 700;
+  text-decoration: none;
+}
+/* line 121, ../sass/screen.scss */
+.navigation ul li :hover, .navigation ul li :active {
+  color: #98d1b2 !important;
+  border-bottom: solid 2px;
+  border-color: #98d1b2;
+  padding-bottom: 5px;
+  font-weight: 700;
+}
+
+/*-- Banner-front --*/
+/* line 134, ../sass/screen.scss */
+.split-line hr {
+  border: none;
+  background-color: #98d1b2;
+  color: #98d1b2;
+  height: 5px;
+  width: 100%;
+  opacity: 0.7;
+  margin-bottom: 7px;
+}
+
+/* line 146, ../sass/screen.scss */
+.banner-front .banner-parent {
+  background-color: #dfecf2;
+  height: 270px;
+}
+/* line 150, ../sass/screen.scss */
+.banner-front .banner-parent .banner-child {
+  padding: 0;
+}
+/* line 153, ../sass/screen.scss */
+.banner-front .banner-parent .banner-child .banner {
+  height: 100%;
+  background-color: #a1c6db;
+  color: #fff;
+  padding: 32px;
+}
+/* line 159, ../sass/screen.scss */
+.banner-front .banner-parent .banner-child .banner h2 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  padding-bottom: 10px;
+  letter-spacing: 0.16rem;
+}
+/* line 166, ../sass/screen.scss */
+.banner-front .banner-parent .banner-child .banner div {
+  font-size: 0.8rem;
+  line-height: 1.3rem;
+}
+/* line 172, ../sass/screen.scss */
+.banner-front .banner-parent .banner-child .banner .views-row h2 {
+  display: none;
+}
+
+/*-- Help --*/
+/* line 183, ../sass/screen.scss */
+.help {
+  margin: 20px auto;
+}
+
+/*-- Sidebar_left --*/
+/* line 190, ../sass/screen.scss */
+.sidebar_left div {
+  font-size: 0.8rem;
+  line-height: 1.3rem;
+}
+/* line 195, ../sass/screen.scss */
+.sidebar_left .contextual-region:first-of-type {
+  border-bottom: solid 2px;
+  border-color: #98d1b2;
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+}
+/* line 203, ../sass/screen.scss */
+.sidebar_left h2 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  padding-bottom: 10px;
+  color: #98d1b2;
+}
+
+/*-- Content --*/
+/* line 213, ../sass/screen.scss */
+.content h2 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  padding-bottom: 25px;
+}
+/* line 219, ../sass/screen.scss */
+.content div {
+  font-size: 1rem;
+  line-height: 1.7rem;
 }
