--- a/themes/ljevicbootstrap/templates/page--front.html.twig
+++ b/themes/ljevicbootstrap/templates/page--front.html.twig
@@ -154,6 +154,9 @@
             </div>
         </div>
     </section>
+    <div class="split-line-bottom">
+        <hr>
+    </div>
     <div class="footer">
         <div class="row">
             <div class="col-6">
