--- a/themes/ljevicbootstrap/sass/screen.scss
+++ b/themes/ljevicbootstrap/sass/screen.scss
@@ -26,6 +26,10 @@ time, mark, audio, video {
   font-family: HelveticaNeue, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+div#page {
+  margin-top: 20px;
+}
+
 /*-- Site branding --*/
 
 .branding {
@@ -219,5 +223,53 @@ time, mark, audio, video {
   div {
     font-size: 1rem;
     line-height: 1.7rem;
+  }
+}
+
+/*-- HR bottom --*/
+
+.split-line-bottom {
+  hr {
+    border: none;
+    background-color: #a7c1d2;
+    color: #a7c1d2;
+    height: 5px;
+    width: 100%;
+    opacity: 0.7;
+    margin-bottom: 7px;
+  }
+}
+
+/*-- Footer --*/
+.footer {
+  padding-bottom: 30px;
+
+  .footer_left {
+    div {
+      font-size: 0.8rem;
+      line-height: 1.3rem;
+      color: #a7c1d2;
+      font-weight: 700;
+    }
+  }
+
+  .footer_right {
+    div {
+      font-size: 0.8rem;
+      line-height: 1.3rem;
+      color: #a7c1d2;
+      font-weight: 700;
+      display: inline-block;
+      float: right;
+
+      ul li {
+        display: inline-block;
+        margin: 0 10px;
+      }
+
+      a {
+        color: #a7c1d2;
+      }
+    }
   }
 }
