--- a/themes/ljevicbootstrap/sass/screen.scss
+++ b/themes/ljevicbootstrap/sass/screen.scss
@@ -196,13 +196,13 @@ div#page {
     line-height: 1.3rem;
   }
 
-  .contextual-region:first-of-type {
-    border-bottom: solid 2px;
-    border-color: #98d1b2;
-    padding-bottom: 25px;
-    margin-bottom: 25px;
+  // .contextual-region:first-of-type {
+  //   border-bottom: solid 2px;
+  //   border-color: #98d1b2;
+  //   padding-bottom: 25px;
+  //   margin-bottom: 25px;
 
-  }
+  // }
 
   h2 {
     font-weight: 700;
@@ -288,6 +288,8 @@ div#page {
       letter-spacing: .04rem;
       width: 80%;
       float: right;
+      line-height: 1.4rem;
+      margin-top: 14px;
     }
   }
 
@@ -314,6 +316,12 @@ div#page {
 /*-- Small devices (landscape phones, less than 768px) --*/
 
 @media (max-width: 767.98px) {
+
+  .languages ul.links li {
+    width: 39%;
+    margin: 5px auto;
+    padding: 0 10px;
+}
   .navigation {
     margin-top: 12px;
     margin-bottom: 20px;
@@ -330,4 +338,24 @@ div#page {
     flex: 0 0 100%;
     max-width: 100%;
   }
+
+    .main-content-middle {
+    width: 100%;
+    max-width: 100%;
+    flex: 0 0 100%;
+  }
+
+    .sidebar_left-parent {
+    margin-bottom: 20px;
+  }
+}
+
+.sidebar_left-parent .split-line hr {
+  border: none;
+  background-color: #98d1b2;
+  color: #98d1b2;
+  height: 3px;
+  width: 100%;
+  opacity: 0.7;
+  margin-bottom: 20px;
 }
