--- a/themes/ljevicbootstrap/stylesheets/screen.css
+++ b/themes/ljevicbootstrap/stylesheets/screen.css
@@ -252,12 +252,12 @@ div#page {
   line-height: 1.3rem;
 }
 /* line 199, ../sass/screen.scss */
-.sidebar_left .contextual-region:first-of-type {
+/* .sidebar_left .contextual-region:first-of-type {
   border-bottom: solid 2px;
   border-color: #98d1b2;
   padding-bottom: 25px;
   margin-bottom: 25px;
-}
+} */
 /* line 207, ../sass/screen.scss */
 .sidebar_left h2 {
   font-weight: 700;
@@ -335,6 +335,8 @@ div#page {
     letter-spacing: .04rem;
     width: 80%;
     float: right;
+    line-height: 1.4rem;
+    margin-top: 14px;    
   }
 
   /* line 295, ../sass/screen.scss */
@@ -357,6 +359,12 @@ div#page {
 }
 /*-- Small devices (landscape phones, less than 768px) --*/
 @media (max-width: 767.98px) {
+
+  .languages ul.links li {
+    width: 39%;
+    margin: 5px auto;
+    padding: 0 10px;
+}
   /* line 317, ../sass/screen.scss */
   .navigation {
     margin-top: 12px;
@@ -375,4 +383,24 @@ div#page {
     flex: 0 0 100%;
     max-width: 100%;
   }
+
+  .main-content-middle {
+    width: 100%;
+    max-width: 100%;
+    flex: 0 0 100%;
+  }
+
+  .sidebar_left-parent {
+    margin-bottom: 20px;
+  }
+}
+
+.sidebar_left-parent .split-line hr {
+  border: none;
+  background-color: #98d1b2;
+  color: #98d1b2;
+  height: 3px;
+  width: 100%;
+  opacity: 0.7;
+  margin-bottom: 20px;
 }
