--- a/themes/ljevicbootstrap/templates/page--front.html.twig
+++ b/themes/ljevicbootstrap/templates/page--front.html.twig
@@ -141,13 +141,25 @@
     <section id="main">
         <div class="main-content row">
             <div class="sidebar_left-parent col-3">
-                {% if page.sidebar_left %}
-                    <aside id="sidebar_left" class="sidebar_left">
-                        {{ page.sidebar_left}}
+                <div class="col">
+                {% if page.sidebar_left_top %}
+                    <aside id="sidebar_left" class="sidebar_left top">
+                        {{ page.sidebar_left_top}}
                     </aside>
                 {% endif %}
+                </div>
+                <div class="split-line">
+                    <hr>
+                </div>
+                <div class="col">
+                {% if page.sidebar_left_bottom %}
+                    <aside id="sidebar_left" class="sidebar_left bottom">
+                        {{ page.sidebar_left_bottom}}
+                    </aside>
+                {% endif %}
+                </div>
             </div>
-            <div class="col-9">
+            <div class="main-content-middle col-9">
                 <div id="content" class="content">
                     {{ page.content }}
                 </div>
