--- a/themes/ljevicbootstrap/templates/page--front.html.twig
+++ b/themes/ljevicbootstrap/templates/page--front.html.twig
@@ -145,7 +145,7 @@
     {#{% endif %}#}
     <section id="main">
         <div class="main-content row">
-            <div class="sidebar_left-parent col-3">
+            <div class="sidebar_left-parent col-3 col-sm-4 ">
                 <div class="col">
                 {% if page.sidebar_left_top %}
                     <aside id="sidebar_left" class="sidebar_left top">
@@ -164,7 +164,7 @@
                 {% endif %}
                 </div>
             </div>
-            <div class="main-content-middle col-9">
+            <div class="main-content-middle col-9 col-sm-8">
                 <div id="content" class="content">
                     {{ page.content }}
                 </div>
