--- a/themes/ljevicbootstrap/stylesheets/screen.css
+++ b/themes/ljevicbootstrap/stylesheets/screen.css
@@ -256,7 +256,7 @@ div#page {
 
 .banner-left img {
     width: 100%;
-/*     height: -webkit-fill-available; */
+    height: -webkit-fill-available;
 }
 
 /*-- Help --*/
@@ -287,6 +287,11 @@ div#page {
 }
 
 /*-- Content --*/
+
+/* .main-content.row {
+    display: block;
+} */
+
 /* line 217, ../sass/screen.scss */
 .content h2 {
   font-weight: 500;
@@ -368,9 +373,9 @@ div#page {
   }
 
   /* line 303, ../sass/screen.scss */
-  .banner-front .banner-parent {
+/*   .banner-front .banner-parent {
     min-height: 338px;
-  }
+  } */
 
   /* line 308, ../sass/screen.scss */
   .sidebar_left div h2:nth-of-type(1) {
@@ -379,6 +384,16 @@ div#page {
 }
 /*-- Small devices (landscape phones, less than 768px) --*/
 @media (max-width: 767.98px) {
+
+  .main-content.row {
+    display: inline-block;
+    display: -webkit-inline-box;    
+}
+
+.banner-left img {
+    width: 100%;
+    height: auto;
+}
 
   .languages ul.links li {
     width: 39%;
