--- a/themes/ljevicbootstrap/sass/screen.scss
+++ b/themes/ljevicbootstrap/sass/screen.scss
@@ -342,12 +342,20 @@ div#page {
 
   .main-content.row {
     display: inline-block;
-    display: -webkit-inline-box;    
+    // display: -webkit-inline-box;    
+}
+
+.banner-left, .banner-right {
+    height: auto;
 }
 
   .banner-left img {
     width: 100%;
     height: auto;
+}
+
+.row.help-parent {
+    display: inline-block;
 }
 
   .languages ul.links li {
