--- a/themes/ljevicbootstrap/templates/page--front.html.twig
+++ b/themes/ljevicbootstrap/templates/page--front.html.twig
@@ -123,7 +123,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row help-parent">
         <div class="col">
             <help id="help">
                 <div class="help">
